--- a/src/css/main.css
+++ b/src/css/main.css
@@ -227,6 +227,112 @@ body {
 }
 
 
+/***************************************  Readers Selector ****************************/
+
+.dropdownContiner {
+    width: 200px;
+    z-index: 3;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    pointer-events: none;
+}
+
+.dropdownContiner>.selectedBox {
+    border: 2px solid var(--color-primary);
+    height: 2.5rem;
+    border-radius: 10px;
+    background-color: #101316;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    color: var(--color-white);
+    font-weight: bold;
+    transition: 300ms all ease-in;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    pointer-events: auto;
+    cursor: pointer;
+}
+
+.dropdownContiner>.selectedBox>span {
+    transition: all 300ms ease-in-out;
+}
+
+.dropdownContiner>.selectedBox>span.active-selector {
+    transform: rotate(180deg);
+}
+
+.dropdownContiner>.optionsBox {
+    /* border: 2px solid var(--color-primary); */
+    border-radius: 10px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    background-color: #101316;
+    opacity: 0;
+    height: 0;
+    font-size: 1rem;
+    color: var(--color-white);
+    font-weight: bold;
+    transition: all 300ms ease-in-out;
+    box-shadow: var(--box-shadow);
+}
+
+.optionsSearchBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    padding-bottom: 1.5rem;
+}
+
+.dropdownContiner>.optionsBox h2 {
+    text-align: right;
+    font-size: 1.3rem;
+    color: var(--color-primary);
+    font-weight: bold;
+}
+
+.optionsSearchBox::before {
+    content: '';
+    height: 1px;
+    position: absolute;
+    bottom: 0;
+    width: 50%;
+    background-color: var(--color-dark);
+    margin-bottom: 0.5rem;
+}
+
+.dropdownContiner>.optionsBox input {
+    width: 80%;
+    margin-top: 0.5rem;
+    height: 30px;
+    border: 0;
+    background-color: #17181b;
+    box-shadow: 10px -10px 33px #111316, -10px 10px 33px #15161a;
+}
+
+.dropdownContiner>.optionsBox.active-selector {
+    opacity: 1;
+    height: 200px;
+    pointer-events: auto;
+}
+
+.dropdownContiner .option {
+    padding: 0.25rem 0.5rem;
+}
+
+.dropdownContiner .option:hover {
+    cursor: pointer;
+    background-color: #1f2126;
+}
+
+
+/***************************************  Readers Selector ****************************/
+
+
 /* scrollBarStyle */
 
 ::-webkit-scrollbar {
@@ -265,7 +371,7 @@ body {
 .container .warp {
     display: block;
     width: 100%;
-    height: calc(100vh - 60px);
+    height: calc(100vh - 94px);
     /*200px*/
     overflow-y: auto;
 }
@@ -303,7 +409,7 @@ body {
 
 .container .warp table tbody tr {
     border-bottom: 1px solid var(--color-dark);
-    box-shadow: var(--box-shadow);
+    /* box-shadow: 10px -10px 33px #111316, -10px 10px 33px #1f2126; */
 }
 
 .container .warp table tbody tr:nth-of-type(even) {
